force-app/main/default/objects/Material_type_Material_Grade_mapping__mdt/Material_type_Material_Grade_mapping__mdt.object-meta.xml
<CustomObject>
    <label>Material type Material Grade mapping</label>
    <pluralLabel>Material type Material Grade mappings</pluralLabel>
</CustomObject>