force-app/main/default/objects/Material_type_Material_Grade_mapping__mdt/fields/Material_Grade__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade__c</fullName>
    <label>Material Grade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>