force-app/main/default/objects/Material_type_Material_Grade_mapping__mdt/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>